chore: 🔧 update settings[#31]